Added basic styling

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Weather Application"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Teko:wght@300;400&display=swap"
+      rel="stylesheet" />
    
     <!--
       manifest.json provides metadata used when your web app is installed on a
